feat: connect persisted market data to web
